--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -1,5 +1,9 @@
 {
+	"home.active": "",
 	"home.add": "Nouveau téléchargement",
+	"home.completed": "",
+	"home.files": "",
+	"home.pending": "",
 	"login.access_request": "",
 	"login.check_email": "",
 	"login.continue_with": "",
