show warning in widget page [sc-1428]

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -504,11 +504,14 @@
 	"stash.widgets.mode.input": "Input",
 	"stash.widgets.preferences": "Preferences",
 	"stash.widgets.preview": "Preview",
+	"stash.widgets.publish_kb": "You can publish it from the",
+	"stash.widgets.publish_kb_link": "Dashboard",
 	"stash.widgets.rename": "Rename",
 	"stash.widgets.rename-title": "Rename search widget",
 	"stash.widgets.snippet": "Code snippet",
 	"stash.widgets.style": "Style",
 	"stash.widgets.title": "Search widget generator",
+	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Get started",
 	"stats.processing_time": "Processing time",
@@ -552,7 +555,7 @@
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
 	"upload.invalid_image": "Selected file is not a valid image",
-	"upload.once_uploaded": "",
+	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, you can search for and view it.",
 	"upload.progress.complete": "Upload complete",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
