add translations + fix layout

--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -1,16 +1,21 @@
 {
-  "generic.cancel": "Cancel",
-  "generic.logout": "Logout",
-  "generic.upload": "Upload",
-  "home.active": "Active",
-  "home.add": "New upload",
-  "home.completed": "Completed",
-  "home.files": "{{num}} files",
-  "home.pending": "Pending",
-  "upload.files": "Files to upload",
-  "upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
-  "upload.steps.destination": "Define destination",
-  "upload.steps.files": "Define the files",
-  "upload.steps.sources": "Select the sources",
-  "upload.steps.upload": "Uploading!"
+	"generic.cancel": "Cancel",
+	"generic.logout": "Logout",
+	"generic.next": "Next step",
+	"generic.upload": "Upload",
+	"home.active": "Active",
+	"home.add": "New upload",
+	"home.completed": "Completed",
+	"home.files": "{{num}} files",
+	"home.pending": "Pending",
+	"upload.files": "Files to upload",
+	"upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
+	"upload.select.search": "Search",
+	"upload.select.title": "Select the files",
+	"upload.source.help": "Choose the source from which you want to upload all the files",
+	"upload.source.title": "Source integration",
+	"upload.steps.destination": "Define destination",
+	"upload.steps.files": "Define the files",
+	"upload.steps.sources": "Select the sources",
+	"upload.steps.upload": "Uploading!"
 }
