--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -1,16 +1,21 @@
 {
-  "generic.cancel": "Cancelar",
-  "generic.logout": "Salir",
-  "generic.upload": "Subir",
-  "home.active": "Activo",
-  "home.add": "Nueva subida",
-  "home.completed": "Completado",
-  "home.files": "{{num}} ficheros",
-  "home.pending": "Pendiente",
-  "upload.files": "Ficheros a subir",
-  "upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
-  "upload.steps.destination": "Selecciona el destino",
-  "upload.steps.files": "Escoge los ficheros",
-  "upload.steps.sources": "Selecciona el origen",
-  "upload.steps.upload": "Súbelo!"
+	"generic.cancel": "Cancelar",
+	"generic.logout": "Salir",
+	"generic.next": "",
+	"generic.upload": "Subir",
+	"home.active": "Activo",
+	"home.add": "Nueva subida",
+	"home.completed": "Completado",
+	"home.files": "{{num}} ficheros",
+	"home.pending": "Pendiente",
+	"upload.files": "Ficheros a subir",
+	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
+	"upload.select.search": "",
+	"upload.select.title": "",
+	"upload.source.help": "",
+	"upload.source.title": "",
+	"upload.steps.destination": "Selecciona el destino",
+	"upload.steps.files": "Escoge los ficheros",
+	"upload.steps.sources": "Selecciona el origen",
+	"upload.steps.upload": "Súbelo!"
 }
