--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -1,16 +1,21 @@
 {
-  "generic.cancel": "",
-  "generic.logout": "",
-  "generic.upload": "",
-  "home.active": "",
-  "home.add": "Nouveau téléchargement",
-  "home.completed": "",
-  "home.files": "",
-  "home.pending": "",
-  "upload.files": "",
-  "upload.review": "",
-  "upload.steps.destination": "",
-  "upload.steps.files": "",
-  "upload.steps.sources": "",
-  "upload.steps.upload": ""
+	"generic.cancel": "Annuler",
+	"generic.logout": "Déconnexion",
+	"generic.next": "Suivant",
+	"generic.upload": "Télécharger",
+	"home.active": "Actifs",
+	"home.add": "Nouveau téléchargement",
+	"home.completed": "Terminés",
+	"home.files": "{{num}}} fichiers",
+	"home.pending": "En attente",
+	"upload.files": "Fichiers à télécharger",
+	"upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
+	"upload.select.search": "Rechercher",
+	"upload.select.title": "Sélectionnez les fichiers",
+	"upload.source.help": "Choisissez la source depuis laquelle télécharger les fichiers",
+	"upload.source.title": "Source d'origine",
+	"upload.steps.destination": "Définir la destination",
+	"upload.steps.files": "Définir les fichiers",
+	"upload.steps.sources": "Sélectionner la source",
+	"upload.steps.upload": "Téléchargement !"
 }
