--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -1,16 +1,21 @@
 {
-  "generic.cancel": "Cancel·lar",
-  "generic.logout": "Sortir",
-  "generic.upload": "Pujar",
-  "home.active": "Actiu",
-  "home.add": "Nova pujada",
-  "home.completed": "Completat",
-  "home.files": "{{num}} fitxers",
-  "home.pending": "Pendent",
-  "upload.files": "Fitxers a pujar",
-  "upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
-  "upload.steps.destination": "Selecciona la destinació",
-  "upload.steps.files": "Escull els fitxers",
-  "upload.steps.sources": "Selecciona l'origen",
-  "upload.steps.upload": "Puja-ho!"
+	"generic.cancel": "Cancel·lar",
+	"generic.logout": "Sortir",
+	"generic.next": "",
+	"generic.upload": "Pujar",
+	"home.active": "Actiu",
+	"home.add": "Nova pujada",
+	"home.completed": "Completat",
+	"home.files": "{{num}} fitxers",
+	"home.pending": "Pendent",
+	"upload.files": "Fitxers a pujar",
+	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
+	"upload.select.search": "",
+	"upload.select.title": "",
+	"upload.source.help": "",
+	"upload.source.title": "",
+	"upload.steps.destination": "Selecciona la destinació",
+	"upload.steps.files": "Escull els fitxers",
+	"upload.steps.sources": "Selecciona l'origen",
+	"upload.steps.upload": "Puja-ho!"
 }
