activity log page [sc-1432]

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -55,10 +55,8 @@
 	"accounts.filter_by": "Troba l’usuari pel nom o correu electrònic",
 	"accounts.no_users_found": "no existeix cap usuari amb aquest correu",
 	"accounts.users": "usuari/s",
-	"activity.created": "Creats",
-	"activity.deleted": "Eliminats",
-	"activity.displayed": "Mostrats",
-	"activity.edited": "Modificats",
+	"activity.modified": "Modificats",
+	"activity.new": "Creats",
 	"activity.processed": "Processats",
 	"activity.subtitle": "Activitat de la Caixa de coneixement dels últims 30 dies",
 	"autocomplete.section.main": "Paraules clau suggerides",
