--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -62,10 +62,8 @@
 	"accounts.filter_by": "Find users by name or by email",
 	"accounts.no_users_found": "we didn't find any user with this email",
 	"accounts.users": "user/s",
-	"activity.created": "Created",
-	"activity.deleted": "Deleted",
-	"activity.displayed": "Displayed",
-	"activity.edited": "Edited",
+	"activity.modified": "Edited",
+	"activity.new": "Created",
 	"activity.processed": "Processed",
 	"activity.subtitle": "Last 30 days Knowledge box activity",
 	"autocomplete.section.main": "Key concept suggestion",
