--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -55,10 +55,8 @@
 	"accounts.filter_by": "Encuentra usuarios por nombre o correo electrónico",
 	"accounts.no_users_found": "No hemos encontrado a ningún usuario con este correo",
 	"accounts.users": "usuario/s",
-	"activity.created": "Creados",
-	"activity.deleted": "Eliminados",
-	"activity.displayed": "Mostrados",
-	"activity.edited": "Modificados",
+	"activity.modified": "Modificados",
+	"activity.new": "Creados",
 	"activity.processed": "Procesados",
 	"activity.subtitle": "Actividad de la Caja de conocimiento de los últimos 30 días",
 	"autocomplete.section.main": "Palabras clave sugeridas",
