Oriolperramon8396/sc 1435/nu api manage keys (#55)
* UI to manage multiple NU keys

* remove old models

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -16,8 +16,7 @@
 	"account.edit_db": "Edit Nuclia DB account",
 	"account.enhanced_model": "Enhanced model",
 	"account.full_name": "Name and surname",
-	"account.generate_key": "",
-	"account.invalid_code": "Entered code is invalid.",
+	"account.generate_key": "Generate a new key",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.knowledgeboxs": "Knowledge boxes",
 	"account.licence": "License",
@@ -28,7 +27,7 @@
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
 	"account.manage_dbs": "Nuclia undestanding API keys",
-	"account.new_code": "",
+	"account.new_code": "New key",
 	"account.new_token": "New Token",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
@@ -47,7 +46,7 @@
 	"account.title": "Account name",
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
-	"account.token_generation_warning": "",
+	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and the on-going jobs (if any) will be lost",
 	"account.total": "State: <strong>{{total}}</strong> Knowledge Box, <strong>{{public}}</strong> public",
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
