improve NUA keys UI

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -7,11 +7,10 @@
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
-	"account.create_db": "Crear un compte Nuclia DB",
+	"account.create_account": "Crear un nou compte",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari?",
-	"account.edit_db": "Editar compte de Nuclia DB",
 	"account.enhanced_model": "Model millorat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
