--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -9,11 +9,13 @@
 	"account.characters": "Total indexed characters",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
-	"account.create_db": "Create a Nuclia DB account",
+	"account.create_account": "Create new account",
 	"account.create_new_db": "Create a new Nuclia DB account",
+	"account.create_nua_account": "Create new Nuclia understanding API keys account ",
 	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
 	"account.delete_user_warning": "Are you sure to delete this user?",
-	"account.edit_db": "Edit Nuclia DB account",
+	"account.edit_nua_account": "Edit Nuclia understanding API keys account ",
+	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
