--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -7,11 +7,10 @@
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
-	"account.create_db": "Crear una cuenta de Nuclia DB",
+	"account.create_account": "Crear una nueva cuenta",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar este usuario?",
-	"account.edit_db": "Editar cuenta de Nuclia DB",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
