--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -63,10 +63,13 @@
 	"accounts.filter_by": "Find users by name or by email",
 	"accounts.no_users_found": "we didn't find any user with this email",
 	"accounts.users": "user/s",
+	"activity.actor": "Actor",
+	"activity.file": "File",
 	"activity.modified": "Edited",
 	"activity.new": "Created",
 	"activity.processed": "Processed",
 	"activity.subtitle": "Last 30 days Knowledge box activity",
+	"activity.timestamp": "Time stamp",
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
