--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -64,10 +64,10 @@
 	"accounts.no_users_found": "we didn't find any user with this email",
 	"accounts.users": "user/s",
 	"activity.actor": "Actor",
-	"activity.file": "File",
 	"activity.modified": "Edited",
 	"activity.new": "Created",
 	"activity.processed": "Processed",
+	"activity.resource": "Resource",
 	"activity.subtitle": "Last 30 days Knowledge box activity",
 	"activity.timestamp": "Time stamp",
 	"autocomplete.section.main": "Key concept suggestion",
