--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -54,10 +54,10 @@
 	"accounts.no_users_found": "No hemos encontrado a ningún usuario con este correo",
 	"accounts.users": "usuario/s",
 	"activity.actor": "Actor",
-	"activity.file": "Archivo",
 	"activity.modified": "Modificados",
 	"activity.new": "Creados",
 	"activity.processed": "Procesados",
+	"activity.resource": "Recurso",
 	"activity.subtitle": "Actividad de la Caja de conocimiento de los últimos 30 días",
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
