--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -53,9 +53,11 @@
 	"accounts.filter_by": "Troba l’usuari pel nom o correu electrònic",
 	"accounts.no_users_found": "no existeix cap usuari amb aquest correu",
 	"accounts.users": "usuari/s",
+	"activity.actor": "Actor",
 	"activity.modified": "Modificats",
 	"activity.new": "Creats",
 	"activity.processed": "Processats",
+	"activity.resource": "Recurs",
 	"activity.subtitle": "Activitat de la Caixa de coneixement dels últims 30 dies",
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
