display splash screen before redirecting to dashboard

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -8,6 +8,9 @@
 	"home.completed": "Completat",
 	"home.files": "{{num}} fitxers",
 	"home.pending": "Pendent",
+	"login.button": "",
+	"login.headline": "",
+	"login.not-connected": "",
 	"upload.files": "Fitxers a pujar",
 	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
 	"upload.select.search": "",
