--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -8,6 +8,9 @@
 	"home.completed": "Completed",
 	"home.files": "{{num}} files",
 	"home.pending": "Pending",
+	"login.button": "Log in",
+	"login.headline": "The easy and fastest way to ingest data",
+	"login.not-connected": "You're not connected, click on the button to log in the browser",
 	"upload.files": "Files to upload",
 	"upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
 	"upload.select.search": "Search",
