--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -8,6 +8,9 @@
 	"home.completed": "Completado",
 	"home.files": "{{num}} ficheros",
 	"home.pending": "Pendiente",
+	"login.button": "",
+	"login.headline": "",
+	"login.not-connected": "",
 	"upload.files": "Ficheros a subir",
 	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
 	"upload.select.search": "",
