--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -8,6 +8,9 @@
 	"home.completed": "Terminés",
 	"home.files": "{{num}}} fichiers",
 	"home.pending": "En attente",
+	"login.button": "Se connecter",
+	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
+	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
 	"upload.files": "Fichiers à télécharger",
 	"upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
 	"upload.select.search": "Rechercher",
