Training control panel: template

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -486,6 +486,17 @@
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "Important! Copy and save the Token code. It will disappear once added.",
 	"stash.settings": "Knowledge box preferences",
+	"stash.settings.processes": "Processes management",
+	"stash.settings.processes.training": "Labelling training",
+	"stash.settings.processes.training.active": "Training is active, you will receive an email when it has finished. You can stop at any time.",
+	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
+	"stash.settings.processes.training.info": "In order to do a labelling training, resources need to be classified. As more resources are labeled, better will be the training. You can create new labels and classifications in the ontology page. What do you want to train?",
+	"stash.settings.processes.training.intent": "Intent",
+	"stash.settings.processes.training.labels": "Labels",
+	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
+	"stash.settings.processes.training.start": "Start training",
+	"stash.settings.processes.training.stop": "Stop training",
+	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
 	"stash.side.activity": "Activity log",
 	"stash.side.api_keys": "API keys",
 	"stash.side.audit": "Audit",
