Fix literals for NUA keys

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -7,24 +7,28 @@
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
-	"account.create_account": "Crear un nou compte",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
+	"account.create_nua_key": "TODO",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari?",
+	"account.edit_nua_key": "TODO",
 	"account.enhanced_model": "Model millorat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
-	"account.knowledgeboxs": "Caixes de coneixement",
+	"account.knowledgeboxes": "Caixes de coneixement",
 	"account.licence": "Llicència",
-	"account.linked_email": "Correu electrònic vinculat al compte",
+	"account.linked_email": "Correu electrònic vinculat al codi",
 	"account.logo": "Imatge de la caixa",
 	"account.logo_description": "Selecciona i puja una imatge",
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
+	"account.manage_dbs": "TODO",
 	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
+	"account.nua_client": "TODO",
+	"account.nua_keys": "TODO",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Preferències de l’Account",
