--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -9,28 +9,29 @@
 	"account.characters": "Total indexed characters",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
-	"account.create_account": "Create new account",
 	"account.create_new_db": "Create a new Nuclia DB account",
-	"account.create_nua_account": "Create new Nuclia understanding API keys account ",
+	"account.create_nua_key": "Create new Nuclia understanding API key ",
 	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
 	"account.delete_user_warning": "Are you sure to delete this user?",
-	"account.edit_nua_account": "Edit Nuclia understanding API keys account ",
+	"account.edit_nua_key": "Edit Nuclia understanding API key ",
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
-	"account.knowledgeboxs": "Knowledge boxes",
+	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
-	"account.linked_email": "Email linked to account",
+	"account.linked_email": "Email linked to key",
 	"account.logo": "Box image",
 	"account.logo_description": "Select and upload an image",
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
-	"account.manage_dbs": "Nuclia undestanding API keys",
+	"account.manage_dbs": "Nuclia understanding API keys",
 	"account.new_code": "New key",
 	"account.new_token": "New Token",
+	"account.nua_client": "Client name",
+	"account.nua_keys": "Understanding API keys",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
 	"account.replace_config": "Replace settings",
