--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -7,24 +7,28 @@
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
-	"account.create_account": "Crear una nueva cuenta",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
+	"account.create_nua_key": "TODO",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar este usuario?",
+	"account.edit_nua_key": "TODO",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
-	"account.knowledgeboxs": "Cajas de conocimiento",
+	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
-	"account.linked_email": "Correo electrónico vinculado a la cuenta",
+	"account.linked_email": "Correo electrónico vinculado al código",
 	"account.logo": "Imagen de la caja",
 	"account.logo_description": "Selecciona y sube una imagen",
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
+	"account.manage_dbs": "TODO",
 	"account.new_code": "Nuevo código",
 	"account.new_token": "Nuevo Token",
+	"account.nua_client": "TODO",
+	"account.nua_keys": "TODO",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
 	"account.settings": "Preferencias de la cuenta",
