On error, do not close kb creation dialog until 3 attempts

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -364,7 +364,8 @@
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.create": "Crea una caixa de coneixement",
-	"stash.create.error": "Error en crear el quadre de coneixement",
+	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
+	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
 	"stash.delete.delete": "Eliminar caixa de coneixement",
