--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -410,7 +410,8 @@
 	"stash.create.anonymization": "Anonymization ",
 	"stash.create.anonymization-help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all documents in the Knowledge Box",
 	"stash.create.anonymization-warning": "Anonymization will only affect the new data that is entered.",
-	"stash.create.error": "Error when creating the knowledge box",
+	"stash.create.error": "Sorry, something went wrong when creating the knowledge box. Please try again.",
+	"stash.create.failure": "So sorry, something is definitely wrong at the moment. Please, contact your administrator.",
 	"stash.create.language.mono": "One language",
 	"stash.create.language.mono-help": "Choose the language of the documentation in this knowlegde box",
 	"stash.create.language.multi": "Multilingual",
