Add activity button to understanding API key

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -28,6 +28,7 @@
 	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
 	"account.nua_client": "TODO",
+	"account.nua_key_activity": "TODO",
 	"account.nua_keys": "TODO",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
