--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -31,6 +31,7 @@
 	"account.new_code": "New key",
 	"account.new_token": "New Token",
 	"account.nua_client": "Client name",
+	"account.nua_key_activity": "NU-API key activity log",
 	"account.nua_keys": "Understanding API keys",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
