NUA Activity logs page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -29,6 +29,8 @@
 	"account.new_token": "Nou Token",
 	"account.nua_client": "TODO",
 	"account.nua_key_activity": "TODO",
+	"account.nua_key_activity_subtitle": "TODO",
+	"account.nua_key_activity_title": "TODO",
 	"account.nua_keys": "TODO",
 	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
 	"account.replace_config": "Reemplaçar configuració",
