--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -28,6 +28,9 @@
 	"account.new_code": "Nuevo código",
 	"account.new_token": "Nuevo Token",
 	"account.nua_client": "TODO",
+	"account.nua_key_activity": "TODO",
+	"account.nua_key_activity_subtitle": "TODO",
+	"account.nua_key_activity_title": "TODO",
 	"account.nua_keys": "TODO",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
