--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -57,7 +57,7 @@
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
 	"account.type.manage": "Manage",
-	"account.users": "User management",
+	"account.users": "Account users management",
 	"account.users_amount": "Total amount of users in the account",
 	"account.users_left": "Total sits left",
 	"account.zone_description": "Zone where data will be host",
