Account home page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -7,6 +7,7 @@
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
+	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
 	"account.create_nua_key": "TODO",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
@@ -47,6 +48,7 @@
 	"account.title_help": "Nom del compte",
 	"account.token_description": "<strong>Important!</strong> Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
+	"account.total_queries": "Nombre total de cerques",
 	"account.type.basic": "Compte Bàsic",
 	"account.type.kb": "Caixes de coneixement",
 	"account.type.manage": "Gestionar",
