--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -5,10 +5,10 @@
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give to this user an administrator role, the user will be able to access and edit all the options.",
-	"account.back": "Back to <strong>Home</strong>",
 	"account.characters": "Total indexed characters",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
+	"account.consuming": "Consuming",
 	"account.create_new_db": "Create a new Nuclia DB account",
 	"account.create_nua_key": "Create new Nuclia understanding API key ",
 	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
@@ -48,12 +48,12 @@
 	"account.stash.retire": "Move to private",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
-	"account.switch": "Switch to  <strong>Account board</strong>",
 	"account.title": "Account name",
 	"account.title_help": "Account name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the Token code. It will disappear once added.",
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and the on-going jobs (if any) will be lost",
 	"account.total": "State: <strong>{{total}}</strong> Knowledge Box, <strong>{{public}}</strong> public",
+	"account.total_queries": "Total number of queries",
 	"account.type.basic": "Basic Account",
 	"account.type.kb": "Knowledge box",
 	"account.type.manage": "Manage",
