--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -7,6 +7,7 @@
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
+	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
 	"account.create_nua_key": "TODO",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
@@ -47,6 +48,7 @@
 	"account.title_help": "Nombre de la cuenta",
 	"account.token_description": "<strong>¡Importante!</strong> Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
+	"account.total_queries": "Número total de búsquedas",
 	"account.type.basic": "Cuenta básica",
 	"account.type.kb": "Cajas de conocimiento",
 	"account.type.manage": "Gestionar",
